chore: migrate to Math.clamp where possible